<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Settings logo ImageView-->
    <ImageButton
        android:id="@+id/action_settings"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="?attr/actionBarItemBackground"
        android:contentDescription="@string/settings_images_key"
        android:src="@drawable/ic_settings" />
    <!--App logo ImageView-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/action_settings"
        android:layout_toLeftOf="@id/action_about"
        android:layout_toRightOf="@id/action_settings"
        android:layout_toStartOf="@id/action_about"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/newsapplogo" />
    <!--Info logo ImageView-->
    <ImageButton
        android:id="@+id/action_about"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="?attr/actionBarItemBackground"
        android:contentDescription="@string/about"
        android:src="@drawable/ic_info" />
</RelativeLayout>